<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".src.third.BuyTicketActivity"
    android:id="@+id/thirdBuyTicketGroup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/user_name"
        android:textSize="15sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/phone"
        android:textSize="15sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/direction"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/directionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction5" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction6" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/up_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/up_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:onClick="chooseUpDate"
            android:src="@mipmap/cat" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/up_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:onClick="chooseUpTime"
            android:src="@mipmap/cat3" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/up_point"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/up_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:onClick="chooseUpPoint"
            android:src="@mipmap/cat2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/down_point"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/down_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:onClick="chooseDownPoint"
            android:src="@mipmap/cat4" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tickNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:text="@string/ticket_number"
            android:textSize="15sp" />

        <TextView
            android:layout_width="10sp"
            android:layout_height="10sp"
            android:layout_marginLeft="7sp"
            android:layout_marginTop="3sp"
            android:background="@drawable/triangle"
            android:onClick="chooseTickNumber" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buyTicketOtherGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/buyTicketLabelOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@id/buyTicketInputOther"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buyTicketInputOther"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/buyTicketInputOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/buyTicketLabelOther"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/secondBuyTicketSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_btn"
            android:onClick="secondBuyTicketSubmit"
            android:text="@string/register_submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/secondBuyTicketCancel"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/secondBuyTicketCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_btn"
            android:onClick="secondBuyTicketCancel"
            android:text="@string/register_back"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/secondBuyTicketSubmit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>