<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.second.MyActivity">

    <Button
        android:id="@+id/secondBuyTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/index_btn"
        android:onClick="secondBuyTicket"
        android:text="@string/buy_ticket"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/secondCheckTicket"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondCheckTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/index_btn"
        android:onClick="secondCheckTicket"
        android:text="@string/check_ticket"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/secondBuyTicket"
        app:layout_constraintRight_toLeftOf="@id/secondTrip"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/index_btn"
        android:onClick="secondTrip"
        android:text="@string/trip"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/secondCheckTicket"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secondAdminInterFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/index_btn"
        android:onClick="secondAdminInterFace"
        android:text="@string/admin_interface"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/secondCheckTicket"
        app:layout_constraintTop_toBottomOf="@id/secondBuyTicket"
        app:layout_constraintVertical_bias="0.2" />


</android.support.constraint.ConstraintLayout>