<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.Tong.src.four.WithCarPeopleRunningActivity">

    <LinearLayout
        android:id="@+id/withCarPeopleRunningActivityLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10sp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="100sp"
        android:paddingBottom="50sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_status"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/withCarPeopleRunningActivityBusStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="withCarPeopleRunningActivityChooseBusStatus"
            android:text="@string/modify" />

    </LinearLayout>


    <Button
        android:onClick="withCarPeopleRunningActivityFlush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flush"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="50sp"/>


</RelativeLayout>
