<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <ImageView
            android:id="@+id/MyTripActivityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:src="@mipmap/cat96"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/MyTripActivityLinearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/MyTripActivityLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/MyTripActivityImageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_point"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/MyTripActivityUpPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down_point"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/MyTripActivityDownPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/MyTripActivityUpPointDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plate_number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/MyTripActivityPlateNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</LinearLayout>