<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">

    <CheckBox
        android:id="@+id/updateBusOrderActivityCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/updateBusOrderActivityUserPhone"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/updateBusOrderActivityDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updateBusOrderActivityCheckBox"
        app:layout_constraintRight_toLeftOf="@id/updateBusOrderActivityUpPoint"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/updateBusOrderActivityUserPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updateBusOrderActivityCheckBox"
        app:layout_constraintRight_toLeftOf="@id/updateBusOrderActivityUpPoint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateBusOrderActivityUpPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updateBusOrderActivityUserPhone"
        app:layout_constraintRight_toLeftOf="@id/updateBusOrderActivityPlateNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateBusOrderActivityPlateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updateBusOrderActivityUpPoint"
        app:layout_constraintRight_toLeftOf="@id/updateBusOrderActivityWithCarPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateBusOrderActivityWithCarPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_car_people"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/updateBusOrderActivityPlateNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>