<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thirdLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".src.third.AdminInterFaceActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="adminInterFaceActivityChooseDirection"
            android:id="@+id/adminInterFaceActivityChooseDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_btn"
            android:text="@string/set_direction_message"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/adminInterFaceActivityAddBus"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:onClick="adminInterFaceActivityAddBus"
            android:id="@+id/adminInterFaceActivityAddBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_btn"
            android:text="@string/add_bus"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/adminInterFaceActivityChooseDirection"
            app:layout_constraintRight_toLeftOf="@id/adminInterFaceActivityUpdateOrder"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:onClick="adminInterFaceActivityUpdateOrder"
            android:id="@+id/adminInterFaceActivityUpdateOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/index_btn"
            android:text="@string/update_order"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/adminInterFaceActivityAddBus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>